test/Fail/Issue549.err
Issue549.agda:4.8: error: [ParseError]
Not a valid identifier: M.R
